tests/snapshots/gnu_extended_asm.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct anon_struct {
    __slate_anon_0: i32,
    __slate_anon_1: i32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn gnu_extended_asm(arg2: i32) -> i32 {
    let mut input: i32 = 0;
    let mut __retval: i32 = 0;
    let mut output: i32 = 0;
    let mut tied: i32 = 0;
    let mut early: i32 = 0;
    input = arg2;
    let _v0: i32 = input;
    let _v1: i32;
    unsafe {
        core::arch::asm!("leal 3({1:e}), {0:e}", lateout(reg) _v1, in(reg) _v0, options(att_syntax));
    }
    output = _v1;
    let _v2: i32 = output;
    let _v3: i32;
    unsafe {
        core::arch::asm!("addl $2, {0:e}", inlateout(reg) _v2 => _v3, options(att_syntax));
    }
    output = _v3;
    let _v4: i32 = output;
    let _v5: i32 = 2;
    let _v6: i32;
    unsafe {
        core::arch::asm!("imull {1:e}, {0:e}", inlateout(reg) _v4 => _v6, in(reg) _v5, options(att_syntax));
    }
    tied = _v6;
    let _v7: i32 = tied;
    let _v8: i32 = 1;
    let _v9: i32;
    unsafe {
        core::arch::asm!("movl {1:e}, {0:e}\n\taddl {2:e}, {0:e}", out(reg) _v9, in(reg) _v7, in(reg) _v8, options(att_syntax));
    }
    early = _v9;
    let _v10: i32 = early;
    let _v11: i32 = 4;
    let _v12: i32;
    unsafe {
        core::arch::asm!("addl ${1}, {0:e}", inlateout(reg) _v10 => _v12, const 4, options(att_syntax));
    }
    early = _v12;
    let _v13: i32 = early;
    __retval = _v13;
    let _v14: i32 = __retval;
    return _v14;
}

fn gnu_numeric_operands(arg0: i32, arg1: i32) -> i32 {
    let mut left: i32 = 0;
    let mut right: i32 = 0;
    let mut __retval: i32 = 0;
    let mut result: i32 = 0;
    left = arg0;
    right = arg1;
    let _v0: i32 = left;
    let _v1: i32 = right;
    let _v2: i32;
    unsafe {
        core::arch::asm!("subl {1:e}, {0:e}", inlateout(reg) _v0 => _v2, in(reg) _v1, options(att_syntax));
    }
    result = _v2;
    let _v3: i32 = result;
    __retval = _v3;
    let _v4: i32 = __retval;
    return _v4;
}

fn gnu_multiple_outputs() -> i32 {
    let mut __retval: i32 = 0;
    let mut left: i32 = 0;
    let mut right: i32 = 0;
    let mut __asm_result: anon_struct = anon_struct { __slate_anon_0: 0, __slate_anon_1: 0 };
    let _v0: i32;
    let _v1: i32;
    unsafe {
        core::arch::asm!("movl $3, {0:e}\n\tmovl $4, {1:e}", lateout(reg) _v0, lateout(reg) _v1, options(att_syntax));
    }
    left = _v0;
    right = _v1;
    let _v2: i32 = left;
    let _v3: i32 = 10;
    let _v4: i32 = _v2 * _v3;
    let _v5: i32 = right;
    let _v6: i32 = _v4 + _v5;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 7;
    let _v3: i32 = gnu_extended_asm(_v2);
    let _v4: i32 = 19;
    let _v5: i32 = 4;
    let _v6: i32 = gnu_numeric_operands(_v4, _v5);
    let _v7: i32 = gnu_multiple_outputs();
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v6, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
