tests/snapshots/gnu_function_pointer_arithmetic.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
struct __SlateAllocaFrame0(i32, i64, i64, i64, Option<unsafe extern "C" fn() -> i32>, i32);

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn target() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 42;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn main() {
    let mut __slate_alloca_frame0: __SlateAllocaFrame0 = __SlateAllocaFrame0(0, 0, 0, 0, None, 0);
    let _v0: i32 = 0;
    __slate_alloca_frame0.5 = _v0;
    __slate_alloca_frame0.4 = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn() -> i32>>(target as *const ()) };
    let _v1: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v2: i32 = 3;
    let _v3: Option<unsafe extern "C" fn() -> i32> = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn() -> i32>>(unsafe { (_v1.unwrap() as *const u8).add(3) }) };
    let _v4: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v5: i64 = unsafe { (_v3.unwrap() as *const u8).offset_from(_v4.unwrap() as *const u8) as i64 };
    __slate_alloca_frame0.3 = _v5;
    let _v6: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v7: i32 = -2;
    let _v8: Option<unsafe extern "C" fn() -> i32> = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn() -> i32>>(unsafe { (_v6.unwrap() as *const u8).offset(_v7 as isize) }) };
    let _v9: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v10: i64 = unsafe { (_v8.unwrap() as *const u8).offset_from(_v9.unwrap() as *const u8) as i64 };
    __slate_alloca_frame0.2 = _v10;
    let _v11: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v12: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v13: i32 = 3;
    let _v14: Option<unsafe extern "C" fn() -> i32> = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn() -> i32>>(unsafe { (_v12.unwrap() as *const u8).add(3) }) };
    let _v15: i64 = unsafe { (_v11.unwrap() as *const u8).offset_from(_v14.unwrap() as *const u8) as i64 };
    __slate_alloca_frame0.1 = _v15;
    let _v16: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v17: i32 = 0;
    let _v18: Option<unsafe extern "C" fn() -> i32> = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn() -> i32>>(unsafe { (_v16.unwrap() as *const u8).add(0) }) };
    let _v19: Option<unsafe extern "C" fn() -> i32> = __slate_alloca_frame0.4;
    let _v20: bool = _v18 == _v19;
    let _v21: i32 = _v20 as i32;
    __slate_alloca_frame0.0 = _v21;
    let _v22: *mut i8 = b"%td %td %td %d\n\0".as_ptr() as *mut i8;
    let _v23: i64 = __slate_alloca_frame0.3;
    let _v24: i64 = __slate_alloca_frame0.2;
    let _v25: i64 = __slate_alloca_frame0.1;
    let _v26: i32 = __slate_alloca_frame0.0;
    let _v27: i32 = unsafe { printf(_v22 as *const i8, _v23, _v24, _v25, _v26) };
    let _v28: i32 = 0;
    __slate_alloca_frame0.5 = _v28;
    let _v29: i32 = __slate_alloca_frame0.5;
    std::process::exit(_v29 as i32);
}
