tests/snapshots/gnu_libc_strings.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
struct __SlateAllocaFrame0(i32, *mut i8, *mut i8, *mut i8, [i8; 6], [i8; 4], [i8; 5], aligned::Aligned<aligned::A16, [i8; 16]>, i32);

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn mempcpy(_0: *mut core::ffi::c_void, _1: *const core::ffi::c_void, _2: usize) -> *mut core::ffi::c_void;
    fn strsep(_0: *mut *mut i8, _1: *const i8) -> *mut i8;
    fn strlen(_0: *const i8) -> usize;
    fn memfrob(_0: *mut core::ffi::c_void, _1: usize) -> *mut core::ffi::c_void;
    fn strcmp(_0: *const i8, _1: *const i8) -> i32;
    fn memrchr(_0: *const core::ffi::c_void, _1: i32, _2: usize) -> *mut core::ffi::c_void;
    fn rawmemchr(_0: *const core::ffi::c_void, _1: i32) -> *mut core::ffi::c_void;
    fn strchrnul(_0: *const i8, _1: i32) -> *mut i8;
    fn strcasestr(_0: *const i8, _1: *const i8) -> *mut i8;
    fn strverscmp(_0: *const i8, _1: *const i8) -> i32;
    fn strerrorname_np(_0: i32) -> *const i8;
    fn strerrordesc_np(_0: i32) -> *const i8;
    fn argz_create_sep(_0: *const i8, _1: i32, _2: *mut *mut i8, _3: *mut usize) -> i32;
    fn argz_count(_0: *const i8, _1: usize) -> usize;
    fn argz_extract(_0: *const i8, _1: usize, _2: *mut *mut i8);
    fn argz_add(_0: *mut *mut i8, _1: *mut usize, _2: *const i8) -> i32;
    fn argz_replace(_0: *mut *mut i8, _1: *mut usize, _2: *const i8, _3: *const i8, _4: *mut u32) -> i32;
    fn argz_stringify(_0: *mut i8, _1: usize, _2: i32);
    fn free(_0: *mut core::ffi::c_void);
    fn envz_add(_0: *mut *mut i8, _1: *mut usize, _2: *const i8, _3: *const i8) -> i32;
    fn envz_get(_0: *const i8, _1: usize, _2: *const i8) -> *mut i8;
    fn envz_entry(_0: *const i8, _1: usize, _2: *const i8) -> *mut i8;
    fn envz_remove(_0: *mut *mut i8, _1: *mut usize, _2: *const i8);
    fn envz_strip(_0: *mut *mut i8, _1: *mut usize);
}

fn gnu_string_extensions() -> i32 {
    let mut __slate_alloca_frame0: __SlateAllocaFrame0 = __SlateAllocaFrame0(0, std::ptr::null_mut(), std::ptr::null_mut(), std::ptr::null_mut(), [0; 6], [0; 4], [0; 5], aligned::Aligned([0; 16]), 0);
    *__slate_alloca_frame0.7 = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    __slate_alloca_frame0.6 = [97, 98, 99, 97, 0];
    __slate_alloca_frame0.5 = [103, 110, 117, 0];
    __slate_alloca_frame0.4 = [97, 58, 58, 98, 99, 0];
    let _v0: *mut i8 = __slate_alloca_frame0.4.as_mut_ptr() as *mut i8;
    __slate_alloca_frame0.3 = _v0;
    let _v1: *mut i8 = __slate_alloca_frame0.7.as_mut_ptr() as *mut i8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    let _v3: *mut i8 = b"slate\0".as_ptr() as *mut i8;
    let _v4: *mut core::ffi::c_void = _v3 as *mut core::ffi::c_void;
    let _v5: u64 = 6;
    let _v6: *mut core::ffi::c_void = unsafe { mempcpy(_v2 as *mut core::ffi::c_void, _v4 as *const core::ffi::c_void, _v5 as usize) };
    let _v7: *mut i8 = _v6 as *mut i8;
    __slate_alloca_frame0.1 = _v7;
    let _v8: i32 = 0;
    __slate_alloca_frame0.0 = _v8;
    {
        loop {
            let _v9: *mut i8 = b":\0".as_ptr() as *mut i8;
            let _v10: *mut i8 = unsafe { strsep(std::ptr::addr_of_mut!(__slate_alloca_frame0.3) as *mut *mut i8, _v9 as *const i8) };
            __slate_alloca_frame0.2 = _v10;
            let _v11: *mut i8 = std::ptr::null_mut();
            let _v12: bool = _v10 != _v11;
            if !_v12 {
                break;
            }
            {
                let _v13: i32 = __slate_alloca_frame0.0;
                let _v14: i32 = 10;
                let _v15: i32 = _v13 * _v14;
                let _v16: *mut i8 = __slate_alloca_frame0.2;
                let _v17: u64 = (unsafe { strlen(_v16 as *const i8) }) as u64;
                let _v18: i32 = _v17 as i32;
                let _v19: i32 = _v15 + _v18;
                __slate_alloca_frame0.0 = _v19;
            }
        }
    }
    let _v20: *mut i8 = __slate_alloca_frame0.5.as_mut_ptr() as *mut i8;
    let _v21: *mut core::ffi::c_void = _v20 as *mut core::ffi::c_void;
    let _v22: u64 = 3;
    let _v23: *mut core::ffi::c_void = unsafe { memfrob(_v21 as *mut core::ffi::c_void, _v22 as usize) };
    let _v24: *mut i8 = __slate_alloca_frame0.5.as_mut_ptr() as *mut i8;
    let _v25: *mut core::ffi::c_void = _v24 as *mut core::ffi::c_void;
    let _v26: u64 = 3;
    let _v27: *mut core::ffi::c_void = unsafe { memfrob(_v25 as *mut core::ffi::c_void, _v26 as usize) };
    let _v28: *mut i8 = __slate_alloca_frame0.1;
    let _v29: *mut i8 = __slate_alloca_frame0.7.as_mut_ptr() as *mut i8;
    let _v30: i64 = unsafe { _v28.offset_from(_v29) as i64 };
    let _v31: i32 = _v30 as i32;
    let _v32: *mut i8 = __slate_alloca_frame0.7.as_mut_ptr() as *mut i8;
    let _v33: *mut i8 = b"slate\0".as_ptr() as *mut i8;
    let _v34: i32 = unsafe { strcmp(_v32 as *const i8, _v33 as *const i8) };
    let _v35: i32 = 0;
    let _v36: bool = _v34 == _v35;
    let _v37: i32 = _v36 as i32;
    let _v38: i32 = _v31 + _v37;
    let _v39: i64 = _v38 as i64;
    let _v40: *mut i8 = __slate_alloca_frame0.6.as_mut_ptr() as *mut i8;
    let _v41: *mut core::ffi::c_void = _v40 as *mut core::ffi::c_void;
    let _v42: i32 = 97;
    let _v43: u64 = 4;
    let _v44: *mut core::ffi::c_void = unsafe { memrchr(_v41 as *const core::ffi::c_void, _v42 as i32, _v43 as usize) };
    let _v45: *mut i8 = _v44 as *mut i8;
    let _v46: *mut i8 = __slate_alloca_frame0.6.as_mut_ptr() as *mut i8;
    let _v47: i64 = unsafe { _v45.offset_from(_v46) as i64 };
    let _v48: i64 = _v39 + _v47;
    let _v49: *mut i8 = __slate_alloca_frame0.6.as_mut_ptr() as *mut i8;
    let _v50: *mut core::ffi::c_void = _v49 as *mut core::ffi::c_void;
    let _v51: i32 = 99;
    let _v52: *mut core::ffi::c_void = unsafe { rawmemchr(_v50 as *const core::ffi::c_void, _v51 as i32) };
    let _v53: *mut i8 = _v52 as *mut i8;
    let _v54: *mut i8 = __slate_alloca_frame0.6.as_mut_ptr() as *mut i8;
    let _v55: i64 = unsafe { _v53.offset_from(_v54) as i64 };
    let _v56: i64 = _v48 + _v55;
    let _v57: *mut i8 = b"abc\0".as_ptr() as *mut i8;
    let _v58: i32 = 122;
    let _v59: *mut i8 = unsafe { strchrnul(_v57 as *const i8, _v58 as i32) };
    let _v60: *mut i8 = b"abc\0".as_ptr() as *mut i8;
    let _v61: i64 = unsafe { _v59.offset_from(_v60) as i64 };
    let _v62: i64 = _v56 + _v61;
    let _v63: *mut i8 = b"GNU Library\0".as_ptr() as *mut i8;
    let _v64: *mut i8 = b"library\0".as_ptr() as *mut i8;
    let _v65: *mut i8 = unsafe { strcasestr(_v63 as *const i8, _v64 as *const i8) };
    let _v66: *mut i8 = std::ptr::null_mut();
    let _v67: bool = _v65 != _v66;
    let _v68: i32 = _v67 as i32;
    let _v69: i64 = _v68 as i64;
    let _v70: i64 = _v62 + _v69;
    let _v71: *mut i8 = b"release-2\0".as_ptr() as *mut i8;
    let _v72: *mut i8 = b"release-10\0".as_ptr() as *mut i8;
    let _v73: i32 = unsafe { strverscmp(_v71 as *const i8, _v72 as *const i8) };
    let _v74: i32 = 0;
    let _v75: bool = _v73 < _v74;
    let _v76: i32 = _v75 as i32;
    let _v77: i64 = _v76 as i64;
    let _v78: i64 = _v70 + _v77;
    let _v79: *mut i8 = __slate_alloca_frame0.5.as_mut_ptr() as *mut i8;
    let _v80: *mut i8 = b"gnu\0".as_ptr() as *mut i8;
    let _v81: i32 = unsafe { strcmp(_v79 as *const i8, _v80 as *const i8) };
    let _v82: i32 = 0;
    let _v83: bool = _v81 == _v82;
    let _v84: i32 = _v83 as i32;
    let _v85: i64 = _v84 as i64;
    let _v86: i64 = _v78 + _v85;
    let _v87: i32 = __slate_alloca_frame0.0;
    let _v88: i64 = _v87 as i64;
    let _v89: i64 = _v86 + _v88;
    let _v90: i32 = 22;
    let _v91: *mut i8 = (unsafe { strerrorname_np(_v90 as i32) }) as *mut i8;
    let _v92: *mut i8 = b"EINVAL\0".as_ptr() as *mut i8;
    let _v93: i32 = unsafe { strcmp(_v91 as *const i8, _v92 as *const i8) };
    let _v94: i32 = 0;
    let _v95: bool = _v93 == _v94;
    let _v96: i32 = _v95 as i32;
    let _v97: i64 = _v96 as i64;
    let _v98: i64 = _v89 + _v97;
    let _v99: i32 = 22;
    let _v100: *mut i8 = (unsafe { strerrordesc_np(_v99 as i32) }) as *mut i8;
    let _v101: *mut i8 = std::ptr::null_mut();
    let _v102: bool = _v100 != _v101;
    let _v103: i32 = _v102 as i32;
    let _v104: i64 = _v103 as i64;
    let _v105: i64 = _v98 + _v104;
    let _v106: i32 = _v105 as i32;
    __slate_alloca_frame0.8 = _v106;
    let _v107: i32 = __slate_alloca_frame0.8;
    return _v107;
}

fn gnu_argz_extensions() -> i32 {
    let mut __retval: i32 = 0;
    let mut argz: *mut i8 = std::ptr::null_mut();
    let mut length: u64 = 0;
    let mut arguments: aligned::Aligned<aligned::A16, [*mut i8; 6]> = aligned::Aligned([std::ptr::null_mut(); 6]);
    let mut replacements: u32 = 0;
    let mut total: i32 = 0;
    let _v0: *mut i8 = std::ptr::null_mut();
    argz = _v0;
    let _v1: u64 = 0;
    length = _v1;
    let _v2: u32 = 0;
    replacements = _v2;
    let _v3: i32 = 0;
    total = _v3;
    let _v4: *mut i8 = b"one:two:three\0".as_ptr() as *mut i8;
    let _v5: i32 = 58;
    let _v6: i32 = unsafe { argz_create_sep(_v4 as *const i8, _v5 as i32, std::ptr::addr_of_mut!(argz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize) };
    let _v7: i32 = 0;
    let _v8: bool = _v6 == _v7;
    let _v9: i32 = _v8 as i32;
    let _v10: i32 = total;
    let _v11: i32 = _v10 + _v9;
    total = _v11;
    let _v12: *mut i8 = argz;
    let _v13: u64 = length;
    let _v14: u64 = (unsafe { argz_count(_v12 as *const i8, _v13 as usize) }) as u64;
    let _v15: u64 = 3;
    let _v16: bool = _v14 == _v15;
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = total;
    let _v19: i32 = _v18 + _v17;
    total = _v19;
    let _v20: *mut i8 = argz;
    let _v21: u64 = length;
    let _v22: *mut *mut i8 = arguments.as_mut_ptr() as *mut *mut i8;
    unsafe { argz_extract(_v20 as *const i8, _v21 as usize, _v22 as *mut *mut i8) };
    let _v23: i64 = 1;
    let _v24: *mut i8 = arguments[(_v23 as usize)];
    let _v25: *mut i8 = b"two\0".as_ptr() as *mut i8;
    let _v26: i32 = unsafe { strcmp(_v24 as *const i8, _v25 as *const i8) };
    let _v27: i32 = 0;
    let _v28: bool = _v26 == _v27;
    let _v29: i32 = _v28 as i32;
    let _v30: i32 = total;
    let _v31: i32 = _v30 + _v29;
    total = _v31;
    let _v32: *mut i8 = b"four\0".as_ptr() as *mut i8;
    let _v33: i32 = unsafe { argz_add(std::ptr::addr_of_mut!(argz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize, _v32 as *const i8) };
    let _v34: i32 = 0;
    let _v35: bool = _v33 == _v34;
    let _v36: i32 = _v35 as i32;
    let _v37: i32 = total;
    let _v38: i32 = _v37 + _v36;
    total = _v38;
    let _v39: *mut i8 = b"three\0".as_ptr() as *mut i8;
    let _v40: *mut i8 = b"THREE\0".as_ptr() as *mut i8;
    let _v41: i32 = unsafe { argz_replace(std::ptr::addr_of_mut!(argz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize, _v39 as *const i8, _v40 as *const i8, std::ptr::addr_of_mut!(replacements) as *mut u32) };
    let _v42: i32 = 0;
    let _v43: bool = _v41 == _v42;
    let _v44: i32 = _v43 as i32;
    let _v45: i32 = total;
    let _v46: i32 = _v45 + _v44;
    total = _v46;
    let _v47: u32 = replacements;
    let _v48: u32 = 1;
    let _v49: bool = _v47 == _v48;
    let _v50: i32 = _v49 as i32;
    let _v51: i32 = total;
    let _v52: i32 = _v51 + _v50;
    total = _v52;
    let _v53: *mut i8 = argz;
    let _v54: u64 = length;
    let _v55: u64 = (unsafe { argz_count(_v53 as *const i8, _v54 as usize) }) as u64;
    let _v56: u64 = 4;
    let _v57: bool = _v55 == _v56;
    let _v58: i32 = _v57 as i32;
    let _v59: i32 = total;
    let _v60: i32 = _v59 + _v58;
    total = _v60;
    let _v61: *mut i8 = argz;
    let _v62: u64 = length;
    let _v63: i32 = 44;
    unsafe { argz_stringify(_v61 as *mut i8, _v62 as usize, _v63 as i32) };
    let _v64: *mut i8 = argz;
    let _v65: *mut i8 = b"one,two,THREE,four\0".as_ptr() as *mut i8;
    let _v66: i32 = unsafe { strcmp(_v64 as *const i8, _v65 as *const i8) };
    let _v67: i32 = 0;
    let _v68: bool = _v66 == _v67;
    let _v69: i32 = _v68 as i32;
    let _v70: i32 = total;
    let _v71: i32 = _v70 + _v69;
    total = _v71;
    let _v72: *mut i8 = argz;
    let _v73: *mut core::ffi::c_void = _v72 as *mut core::ffi::c_void;
    unsafe { free(_v73 as *mut core::ffi::c_void) };
    let _v74: i32 = total;
    __retval = _v74;
    let _v75: i32 = __retval;
    return _v75;
}

fn gnu_envz_extensions() -> i32 {
    let mut __retval: i32 = 0;
    let mut envz: *mut i8 = std::ptr::null_mut();
    let mut length: u64 = 0;
    let mut total: i32 = 0;
    let _v0: *mut i8 = std::ptr::null_mut();
    envz = _v0;
    let _v1: u64 = 0;
    length = _v1;
    let _v2: i32 = 0;
    total = _v2;
    let _v3: *mut i8 = b"ALPHA\0".as_ptr() as *mut i8;
    let _v4: *mut i8 = b"one\0".as_ptr() as *mut i8;
    let _v5: i32 = unsafe { envz_add(std::ptr::addr_of_mut!(envz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize, _v3 as *const i8, _v4 as *const i8) };
    let _v6: i32 = 0;
    let _v7: bool = _v5 == _v6;
    let _v8: i32 = _v7 as i32;
    let _v9: i32 = total;
    let _v10: i32 = _v9 + _v8;
    total = _v10;
    let _v11: *mut i8 = b"BETA\0".as_ptr() as *mut i8;
    let _v12: *mut i8 = std::ptr::null_mut();
    let _v13: i32 = unsafe { envz_add(std::ptr::addr_of_mut!(envz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize, _v11 as *const i8, _v12 as *const i8) };
    let _v14: i32 = 0;
    let _v15: bool = _v13 == _v14;
    let _v16: i32 = _v15 as i32;
    let _v17: i32 = total;
    let _v18: i32 = _v17 + _v16;
    total = _v18;
    let _v19: *mut i8 = envz;
    let _v20: u64 = length;
    let _v21: *mut i8 = b"ALPHA\0".as_ptr() as *mut i8;
    let _v22: *mut i8 = unsafe { envz_get(_v19 as *const i8, _v20 as usize, _v21 as *const i8) };
    let _v23: *mut i8 = b"one\0".as_ptr() as *mut i8;
    let _v24: i32 = unsafe { strcmp(_v22 as *const i8, _v23 as *const i8) };
    let _v25: i32 = 0;
    let _v26: bool = _v24 == _v25;
    let _v27: i32 = _v26 as i32;
    let _v28: i32 = total;
    let _v29: i32 = _v28 + _v27;
    total = _v29;
    let _v30: *mut i8 = envz;
    let _v31: u64 = length;
    let _v32: *mut i8 = b"BETA\0".as_ptr() as *mut i8;
    let _v33: *mut i8 = unsafe { envz_entry(_v30 as *const i8, _v31 as usize, _v32 as *const i8) };
    let _v34: *mut i8 = std::ptr::null_mut();
    let _v35: bool = _v33 != _v34;
    let _v36: i32 = _v35 as i32;
    let _v37: i32 = total;
    let _v38: i32 = _v37 + _v36;
    total = _v38;
    let _v39: *mut i8 = b"ALPHA\0".as_ptr() as *mut i8;
    unsafe { envz_remove(std::ptr::addr_of_mut!(envz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize, _v39 as *const i8) };
    let _v40: *mut i8 = envz;
    let _v41: u64 = length;
    let _v42: *mut i8 = b"ALPHA\0".as_ptr() as *mut i8;
    let _v43: *mut i8 = unsafe { envz_get(_v40 as *const i8, _v41 as usize, _v42 as *const i8) };
    let _v44: *mut i8 = std::ptr::null_mut();
    let _v45: bool = _v43 == _v44;
    let _v46: i32 = _v45 as i32;
    let _v47: i32 = total;
    let _v48: i32 = _v47 + _v46;
    total = _v48;
    unsafe { envz_strip(std::ptr::addr_of_mut!(envz) as *mut *mut i8, std::ptr::addr_of_mut!(length) as *mut usize) };
    let _v49: u64 = length;
    let _v50: u64 = 0;
    let _v51: bool = _v49 == _v50;
    let _v52: i32 = _v51 as i32;
    let _v53: i32 = total;
    let _v54: i32 = _v53 + _v52;
    total = _v54;
    let _v55: *mut i8 = envz;
    let _v56: *mut core::ffi::c_void = _v55 as *mut core::ffi::c_void;
    unsafe { free(_v56 as *mut core::ffi::c_void) };
    let _v57: i32 = total;
    __retval = _v57;
    let _v58: i32 = __retval;
    return _v58;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = gnu_string_extensions();
    let _v3: i32 = gnu_argz_extensions();
    let _v4: i32 = gnu_envz_extensions();
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
