tests/snapshots/gnu_pragmas.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C, packed)]
#[derive(Clone, Copy)]
struct GNUPragmaPacked {
    tag: u8,
    value: u32,
}


#[cfg(target_arch = "x86_64")]
core::arch::global_asm!(".weak gnu_pragma_weak_alias\n.set gnu_pragma_weak_alias, gnu_pragma_weak_target", options(att_syntax, raw));

static mut gnu_pragma_inner_macro: i32 = 11;

static mut gnu_pragma_outer_macro: i32 = 7;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn gnu_pragma_weak_alias() -> i32;
}

fn gnu_pragma_hidden(arg0: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg0;
    let _v0: i32 = value;
    let _v1: i32 = 13;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

#[unsafe(no_mangle)]
pub extern "C" fn gnu_pragma_weak_target() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 17;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn gnu_pragma_actual() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 19;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn gnu_pragma_diagnostic() -> i32 {
    let mut __retval: i32 = 0;
    let mut ignored: i32 = 0;
    let _v0: i32 = 23;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut packed: GNUPragmaPacked = GNUPragmaPacked { tag: 0, value: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    packed = GNUPragmaPacked { tag: 29, value: 31 };
    let _v1: *mut i8 = b"%d %d %d %d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 5;
    let _v3: i32 = unsafe { gnu_pragma_inner_macro };
    let _v4: i32 = unsafe { gnu_pragma_outer_macro };
    let _v5: i32 = 5;
    let _v6: i32 = std::mem::offset_of!(GNUPragmaPacked, value) as i32;
    let _v7: i32 = 37;
    let _v8: i32 = gnu_pragma_hidden(_v7);
    let _v9: i32 = unsafe { gnu_pragma_weak_alias() };
    let _v10: i32 = gnu_pragma_actual();
    let _v11: i32 = gnu_pragma_diagnostic();
    let _v12: i32 = _v10 + _v11;
    let _v13: u8 = packed.tag;
    let _v14: i32 = _v13 as i32;
    let _v15: i32 = _v12 + _v14;
    let _v16: u32 = packed.value;
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = _v15 + _v17;
    let _v19: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4, _v5, _v6, _v8, _v9, _v18) };
    let _v20: i32 = 0;
    __retval = _v20;
    let _v21: i32 = __retval;
    std::process::exit(_v21 as i32);
}
