tests/snapshots/gnu_symbol_pragmas.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[cfg(target_arch = "x86_64")]
core::arch::global_asm!(".weak pragma_weak_alias\n.set pragma_weak_alias, pragma_weak_target", options(att_syntax, raw));

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn pragma_weak_alias(_0: i32) -> i32;
}

#[unsafe(no_mangle)]
pub extern "C" fn pragma_weak_target(arg1: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg1;
    let _v0: i32 = value;
    let _v1: i32 = 7;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn pragma_actual(arg0: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg0;
    let _v0: i32 = value;
    let _v1: i32 = 3;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 29;
    let _v3: i32 = unsafe { pragma_weak_alias(_v2 as i32) };
    let _v4: bool = (Some(pragma_weak_alias).unwrap() as *const u8) == (Some(pragma_weak_target).unwrap() as *const u8);
    let _v5: i32 = _v4 as i32;
    let _v6: i32 = 13;
    let _v7: i32 = pragma_actual(_v6);
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
