tests/snapshots/goto_forward.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 1;
                x = _v1;
                __state0 = 2;
                continue '__dispatch0;
            }
            1 => {
                let _v2: i32 = 99;
                x = _v2;
                __state0 = 2;
                continue '__dispatch0;
            }
            2 => {
                let _v3: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v4: i32 = x;
                let _v5: i32 = unsafe { printf(_v3 as *const i8, _v4) };
                let _v6: i32 = 0;
                __retval = _v6;
                let _v7: i32 = __retval;
                std::process::exit(_v7 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
