tests/snapshots/goto_if_scope.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut n: i32 = 0;
    let mut cls: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 7;
                n = _v1;
                {
                    let _v2: i32 = n;
                    let _v3: i32 = 0;
                    let _v4: bool = _v2 < _v3;
                    if _v4 {
                        __state0 = 1;
                        continue '__dispatch0;
                    } else {
                        __state0 = 2;
                        continue '__dispatch0;
                    }
                }
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                let _v5: i32 = -1;
                cls = _v5;
                __state0 = 3;
                continue '__dispatch0;
            }
            2 => {
                let _v6: i32 = 1;
                cls = _v6;
                __state0 = 3;
                continue '__dispatch0;
            }
            3 => {
                let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v8: i32 = cls;
                let _v9: i32 = unsafe { printf(_v7 as *const i8, _v8) };
                let _v10: i32 = 0;
                __retval = _v10;
                let _v11: i32 = __retval;
                std::process::exit(_v11 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
