tests/snapshots/goto_irreducible.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut choose_b: i32 = 0;
    let mut x: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 0;
                unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(choose_b), _v1) };
                let _v2: i32 = 0;
                x = _v2;
                {
                    let _v3: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(choose_b)) };
                    let _v4: bool = _v3 != 0;
                    if _v4 {
                        __state0 = 2;
                        continue '__dispatch0;
                    }
                }
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                let _v5: i32 = x;
                let _v6: i32 = 1;
                let _v7: i32 = _v5 + _v6;
                x = _v7;
                {
                    let _v8: i32 = x;
                    let _v9: i32 = 3;
                    let _v10: bool = _v8 < _v9;
                    if _v10 {
                        __state0 = 2;
                        continue '__dispatch0;
                    }
                }
                __state0 = 3;
                continue '__dispatch0;
            }
            2 => {
                let _v11: i32 = x;
                let _v12: i32 = 2;
                let _v13: i32 = _v11 + _v12;
                x = _v13;
                {
                    let _v14: i32 = x;
                    let _v15: i32 = 4;
                    let _v16: bool = _v14 < _v15;
                    if _v16 {
                        __state0 = 1;
                        continue '__dispatch0;
                    }
                }
                __state0 = 3;
                continue '__dispatch0;
            }
            3 => {
                let _v17: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v18: i32 = x;
                let _v19: i32 = unsafe { printf(_v17 as *const i8, _v18) };
                let _v20: i32 = 0;
                __retval = _v20;
                let _v21: i32 = __retval;
                std::process::exit(_v21 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
